--- a/food.html
+++ b/food.html
@@ -389,7 +389,7 @@
                     <img id="omni"src="https://omnifood.dev/img/omnifood-logo.png" alt="omnofood">
                     <div id="thre">
                         <img id="ther1" src="https://tse2.mm.bing.net/th?id=OIP.XgT9d552B6R9C60Ul2yqkAHaHa&pid=Api&P=0&h=180" alt="instagram">
-                        <img id="thre2" src="https://tse3.mm.bing.net/th?id=OIP.DFen3CNf9Tn73CX6ARg8DAHaHa&pid=Api&P=0&h=180" alt="face book">
+                        <img id="thre2" src="fb.jpg" alt="face book">
                         <img id="ther3" src="https://tse4.mm.bing.net/th?id=OIP.H836RvDYYgQZcZn0TC8qBAHaHa&pid=Api&P=0&h=180" alt="twiitter">
                      </div>
                      <div id="ther4">Copyright © 2024 by Omnifood, Inc. All rights reserved.</div>
